- java, javafx and lombok update